--- a/apps/bank-webhook/package.json
+++ b/apps/bank-webhook/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@repo/db":"*",
     "@types/express": "^4.17.21",
     "esbuild": "^0.23.1",
     "express": "^4.19.2"
